--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   firebase_core: ^1.3.0
   firebase_auth: ^2.0.0
   fluttertoast: ^8.0.7
+  cloud_firestore: ^2.4.0
+  intl: ^0.17.0
+  firebase_storage: ^10.0.1
+  
 
 dev_dependencies:
   flutter_test:
