--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.17.0
   firebase_storage: ^10.0.1
   firebase_messaging: ^10.0.4
+  flutter_local_notifications: ^8.2.0
   
   
 
